[package]
name = "nautilus"
version = "0.1.0"
authors = ["John P. Warren <44749714+gatewaynode@users.noreply.github.com>"]
edition = "2018"

[lib]
name = "nautilus"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { git = "https://github.com/clap-rs/clap/", features = ["yaml"] }
diesel = { version = "1.0.0", features = ["postgres"] }
dotenv = "0.9.0"
tempfile = "3"
subprocess = "0.2.4"
prettytable-rs = "^0.8"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
