[package]
name = "nautilus"
version = "0.1.0"
authors = ["gatewaynode <44749714+gatewaynode@users.noreply.github.com>"]
edition = "2018"

[lib]
name = "nautilus"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { git = "https://github.com/clap-rs/clap/", features = ["yaml"] }
diesel = { version = "1.4.5", features = ["postgres", "chrono"] }
dotenv = "0.15.0"
tempfile = "3.1.0"
subprocess = "0.2.4"
prettytable-rs = "0.8.0"
serde = "1.0.113"
serde_json = "1.0.55"
serde_derive = "1.0.113"
chrono = { version = "0.4.11", features = ["serde"] }
rustyline = "6.2.0"
simple_prompts = "0.1.3"
vim_edit = "0.1.0"
dialoguer = "0.6.2"
dirs = "3.0.0"
